# WaveAi-Company

./: .gitignore  00_Project_Vision.md  01_Project_Objectives.md  02_Project_Glossary.md  03_Assumptions.md  04_Open_Questions.md  05_Decisions.md  06_Master_Roadmap.md  07_Tech_Stack.md  08_AI_Instructions.md  09_Project_Backlog.md  CLAUDE.md  MASTER_PLAN.md  README.md
services/analysis/: .env.example  Dockerfile  README.md  pyproject.toml
services/analysis/app/: __init__.py  config.py  demo_data.py  main.py
services/analysis/app/engine/: __init__.py  base.py  wave_eeg_engine.py
services/analysis/tests/: test_analyze_session.py  test_analyze_window.py  test_api.py  test_engine.py
services/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
services/api/app/: __init__.py  config.py  consent.py  main.py
services/api/app/api/: __init__.py  auth.py  care_links.py  deps.py  results.py  schemas.py  stream.py
services/api/app/db/: __init__.py  base.py  session.py
services/api/app/models/: __init__.py  care_link.py  refresh_token.py  result.py  session.py  user.py
services/api/app/repositories/: __init__.py  care_link.py  refresh_token.py  result.py  session.py  user.py
services/api/app/security/: __init__.py  crypto.py  password.py  rate_limit.py  tokens.py
services/api/app/services/: __init__.py  analysis_client.py  auth.py  care.py  results.py  streaming.py
services/api/migrations/: env.py
services/api/migrations/versions/: 0001_cria_users_e_perfis.py  0002_cria_refresh_tokens.py  0003_cria_care_links_e_auditoria.py  0004_cria_capture_sessions.py  0005_cria_results_auditoria_e_consentimento.py  0006_care_link_declined_e_versao_consentimento.py
services/api/scripts/: __init__.py  seed_dev.py
services/api/tests/: conftest.py  test_auth_api.py  test_auth_service.py  test_care_link.py  test_config_secret.py  test_crypto.py  test_health.py  test_password.py  test_results.py  test_stream.py  test_tokens.py  test_user_repository.py
(+84 files in other folders)
