[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "waveai-analysis"
version = "0.1.0"
description = "WaveAI — serviço de análise (AnalysisEngine sobre wave_eeg)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.2",
    # Pacote de análise do monorepo (instalar de packages/wave-eeg — ver README).
    "wave-eeg>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
