[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "waveai-api"
version = "0.1.0"
description = "WaveAI — serviço de API (FastAPI): auth, domínio e gateway WS"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "argon2-cffi>=23.1",
    "email-validator>=2.0",
    "pyjwt>=2.8",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
